@@ -42,17 +42,11 @@ namespace WebCore {
 
 typedef Vector<RefPtr<ScriptProfile> > ProfilesArray;
 
-v8::Handle<v8::Value> V8Console::profilesAccessorGetter(v8::Local<v8::String> name, const v8::AccessorInfo& info)
+v8::Handle<v8::Value> V8Console::profilesAccessorGetter(v8::Local<v8::String>, const v8::AccessorInfo&)
 {
     INC_STATS("DOM.Console.profilesAccessorGetter");
-    Console* imp = V8Console::toNative(info.Holder());
-    const ProfilesArray& profiles = imp->profiles();
-    v8::Handle<v8::Array> result = v8::Array::New(profiles.size());
-    int index = 0;
-    ProfilesArray::const_iterator end = profiles.end();
-    for (ProfilesArray::const_iterator iter = profiles.begin(); iter != end; ++iter)
-        result->Set(v8::Integer::New(index++), toV8(iter->get()));
-    return result;
+    // FIXME: Provide a real implementation.
+    return v8::Array::New(0);
 }
 
 } // namespace WebCore
