@@ -1,3 +1,15 @@
+2010-05-06  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Temporarily disable 'console.profiles' until we can distinguish
+        functions from different frames
+
+        https://bugs.webkit.org/show_bug.cgi?id=38638
+
+        * bindings/v8/custom/V8ConsoleCustom.cpp:
+        (WebCore::V8Console::profilesAccessorGetter):
+
 2010-05-06  Steve Block  <steveblock@google.com>
 
         Reviewed by Eric Seidel.
